@@ -1,0 +1,3 @@
+`sppResponse` <- function(x, ...) {
+  UseMethod("sppResponse")
+}
